vpc.tf
#internet vpc
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  instance_tenancy = "default"
  enable_dns_support = "true"
  enable_dns_hostnames = "true"
  enable_classiclink = "false"
  tags = {
    Name = "main"
  }
}

#Subnets
resource "aws_subnet" "main_public_1" {
  cidr_block = "10.0.1.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1a"
  tags = {
    Name = "main_public_1"
  }
}

resource "aws_subnet" "main_public_2" {
  cidr_block = "10.0.2.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1b"
  tags = {
    Name = "main_public_2"
  }
}

resource "aws_subnet" "main_public_3" {
  cidr_block = "10.0.3.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1c"
  tags = {
    Name = "main_public_3"
  }
}

resource "aws_subnet" "main_private_1" {
  cidr_block = "10.0.4.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1a"
  tags = {
    Name = "main_private_1"
  }
}

resource "aws_subnet" "main_private_2" {
  cidr_block = "10.0.5.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1b"
  tags = {
    Name = "main_private_2"
  }
}

resource "aws_subnet" "main_private_3" {
  cidr_block = "10.0.6.0/24"
  vpc_id = aws_vpc.main.id
  map_public_ip_on_launch = "true"
  availability_zone = "eu-west-1c"
  tags = {
    Name = "main_private_3"
  }
}

#Internet gateway
resource "aws_internet_gateway" "main_gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main"
  }
}

#route table
resource "aws_route_table" "main_public" {
  vpc_id = aws_vpc.main.id
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.main_gw.id
  }
  tags = {
    Name = "main-public-1"
  }
}

#route associations public
resource "aws_route_table_association" "main-public-1-a" {
  route_table_id = aws_route_table.main_public.id
  subnet_id = aws_subnet.main_public_1.id
}
resource "aws_route_table_association" "main-public-2-a" {
  route_table_id = aws_route_table.main_public.id
  subnet_id = aws_subnet.main_public_2.id
}
resource "aws_route_table_association" "main-public-3-a" {
  route_table_id = aws_route_table.main_public.id
  subnet_id = aws_subnet.main_public_3.id
}
